tests/paczka1/fuzzy1/94222428.err
Error in line 2: RKSt A599 90,8
Error in line 17: OBCAoBShc S712 0,1
Error in line 21: S712 S233 2,3
Error in line 23: S712 S999 53,3
